k8s_pods/pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:latest
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 53
          protocol: TCP
        - containerPort: 53
          protocol: UDP
