k8s_pods/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-service
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - port: 80
    targetPort: TCP
