k8s_pods/service.yaml
################################################################
###########        created by : Achraf KHABAR        ###########
###########       date of creation : 3/31/2026       ###########
################################################################

apiVersion: v1
kind: Service
metadata:
  name: pihole-service
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
  - name: web-tcp
    port: 80
    targetPort: 80
    protocol: TCP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
