k8s_pods/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.lab
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mon-monitoring-grafana
            port: 
              number: 80
