k8s_pods/homer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /www/assets/config.yml
          subPath: config.yml
      volumes:
      - name: config-volume
        configMap:
          name: homer-config
---
apiVersion: v1
kind: Service
metadata:
  name: homer-service
  namespace: default
spec:
  selector:
    app: homer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: home.lab
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homer-service
            port: 
              number: 80
